fix for day-tests Mockbean of fileReaders